name:                roman
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/huseyinyilmaz/hs-roman#readme
license:             BSD3
license-file:        LICENSE
author:              Huseyin Yilmaz
maintainer:          yilmazhuseyin@gmail.com
copyright:           mit
category:            misc
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , src/Data
  exposed-modules:     Data.Roman
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite roman-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HUnit
                     , QuickCheck
                     , roman
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite roman-test-quickcheck
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             QuickCheck.hs
  build-depends:       base
                     , HUnit
                     , QuickCheck
                     , roman
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/huseyinyilmaz/hs-roman
